--- a/FI.AtividadeEntrevista/packages.config
+++ b/FI.AtividadeEntrevista/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="jQuery" version="1.4.4" targetFramework="net48" />
+  <package id="jQuery" version="3.7.1" targetFramework="net48" />
   <package id="jQuery.Validation" version="1.21.0" targetFramework="net48" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net48" />
 </packages>
